resolved map width issue on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,15 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 425px) {
   .leaflet-container {
     height: 200px;
     width: 300px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .leaflet-container {
+    height: 200px;
+    width: 250px;
   }
 }
